importacao do trabalho anterior

--- a/InspiringIPT/InspiringIPT/InspiringIPT.csproj
+++ b/InspiringIPT/InspiringIPT/InspiringIPT.csproj
@@ -168,36 +168,76 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ColaboradoresController.cs" />
+    <Compile Include="Controllers\CursosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\PotencialAlunoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Areas.cs" />
+    <Compile Include="Models\Colaboradores.cs" />
+    <Compile Include="Models\Cursos.cs" />
+    <Compile Include="Models\Escola.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ListaColaboradores.cs" />
+    <Compile Include="Models\Listagem.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\OutrasAreas.cs" />
+    <Compile Include="Models\OutrosCursos.cs" />
+    <Compile Include="Models\PotencialAluno.cs" />
+    <Compile Include="Models\TipoCurso.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Imags\alimentação.jpg" />
+    <Content Include="Imags\associativismo.jpg" />
+    <Content Include="Imags\biblioteca.jpg" />
+    <Content Include="Imags\campos2.jpg" />
+    <Content Include="Imags\campus_ipt.jpg" />
+    <Content Include="Imags\cara_ipt2.jpg" />
+    <Content Include="Imags\cultura.jpg" />
+    <Content Include="Imags\desporto.jpg" />
+    <Content Include="Imags\logotipo.jpg" />
+    <Content Include="Imags\residência.jpg" />
+    <Content Include="Imags\wallpaperr.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Content\bootstrap-theme.min.css.map" />
+    <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Content\bootstrap.min.css.map" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <Content Include="Scripts\jquery-3.1.1.min.map" />
+    <Content Include="Scripts\jquery-3.1.1.slim.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <None Include="Scripts\jquery-3.1.1-vsdoc.js" />
+    <Content Include="Scripts\jquery-3.1.1.js" />
+    <Content Include="Scripts\jquery-3.1.1.min.js" />
+    <Content Include="Scripts\jquery-3.1.1.slim.js" />
+    <Content Include="Scripts\jquery-3.1.1.slim.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\respond.js" />
+    <Content Include="Scripts\respond.matchmedia.addListener.js" />
+    <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
@@ -234,6 +274,27 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Colaboradores\Create.cshtml" />
+    <Content Include="Views\Colaboradores\Details.cshtml" />
+    <Content Include="Views\Colaboradores\Edit.cshtml" />
+    <Content Include="Views\Colaboradores\Editar.cshtml" />
+    <Content Include="Views\Colaboradores\Listagem.cshtml" />
+    <Content Include="Views\Colaboradores\Perfil.cshtml" />
+    <Content Include="Views\Cursos\Create.cshtml" />
+    <Content Include="Views\Cursos\Delete.cshtml" />
+    <Content Include="Views\Cursos\Details.cshtml" />
+    <Content Include="Views\Cursos\Edit.cshtml" />
+    <Content Include="Views\Cursos\Index.cshtml" />
+    <Content Include="Views\Home\Agenda.cshtml" />
+    <Content Include="Views\Home\Inscricao.cshtml" />
+    <Content Include="Views\Home\Ipt.cshtml" />
+    <Content Include="Views\Home\Noticia.cshtml" />
+    <Content Include="Views\PotencialAluno\Create.cshtml" />
+    <Content Include="Views\PotencialAluno\Delete.cshtml" />
+    <Content Include="Views\PotencialAluno\Details.cshtml" />
+    <Content Include="Views\PotencialAluno\Edit.cshtml" />
+    <Content Include="Views\PotencialAluno\Lista.cshtml" />
+    <Content Include="Views\Shared\Info.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
