--- a/InspiringIPT/InspiringIPT/Web.config
+++ b/InspiringIPT/InspiringIPT/Web.config
@@ -12,7 +12,7 @@
 
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-InspiringIPT-20170328012618.mdf;Initial Catalog=aspnet-InspiringIPT-20170328012618;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="AlunoDBContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\InspiringIPT-20170328012618.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="AlunoDBContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\InspiringIPT-20170328012618.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 
 
