--- a/InspiringIPT/InspiringIPT/InspiringIPT.csproj
+++ b/InspiringIPT/InspiringIPT/InspiringIPT.csproj
@@ -393,16 +393,11 @@
     </None>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-3.1.1-vsdoc.js" />
-    <Content Include="Imags\alimentação.jpg" />
-    <Content Include="Imags\associativismo.jpg" />
-    <Content Include="Imags\biblioteca.jpg" />
-    <Content Include="Imags\campos2.jpg" />
-    <Content Include="Imags\campus_ipt.jpg" />
-    <Content Include="Imags\cara_ipt2.jpg" />
-    <Content Include="Imags\cultura.jpg" />
-    <Content Include="Imags\desporto.jpg" />
-    <Content Include="Imags\logotipo.jpg" />
-    <Content Include="Imags\residência.jpg" />
+    <Content Include="Imags\banner\banner_1.png" />
+    <Content Include="Imags\banner\banner_4.png" />
+    <Content Include="Imags\banner\banner_5.png" />
+    <Content Include="Imags\banner\banner_6.png" />
+    <Content Include="Imags\banner\banner_7_.jpg" />
     <Content Include="Imags\wallpaperr.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
