Home/Index: atualização de aspecto do sistema

--- a/InspiringIPT/InspiringIPT/InspiringIPT.csproj
+++ b/InspiringIPT/InspiringIPT/InspiringIPT.csproj
@@ -393,11 +393,33 @@
     </None>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-3.1.1-vsdoc.js" />
-    <Content Include="Imags\banner\banner_1.png" />
-    <Content Include="Imags\banner\banner_4.png" />
-    <Content Include="Imags\banner\banner_5.png" />
-    <Content Include="Imags\banner\banner_6.png" />
+    <Content Include="Imags\alimentacao\alimentacao1.jpg" />
+    <Content Include="Imags\alimentacao\alimentacao3.jpg" />
+    <Content Include="Imags\alimentacao\alimentacao4.jpg" />
+    <Content Include="Imags\alojamento\alojamento1.jpg" />
+    <Content Include="Imags\alojamento\alojamento2.jpg" />
+    <Content Include="Imags\alojamento\alojamento3.jpg" />
+    <Content Include="Imags\alojamento\alojamento4.jpg" />
+    <Content Include="Imags\associativismo\Associativismo2.jpg" />
+    <Content Include="Imags\associativismo\Associativismo3.jpg" />
+    <Content Include="Imags\associativismo\Associativismo4.jpg" />
+    <Content Include="Imags\banner\banner_1.jpg" />
+    <Content Include="Imags\banner\banner_4.jpg" />
+    <Content Include="Imags\banner\banner_5.jpg" />
+    <Content Include="Imags\banner\banner_6.jpg" />
     <Content Include="Imags\banner\banner_7_.jpg" />
+    <Content Include="Imags\cultura\cultura1.jpg" />
+    <Content Include="Imags\cultura\cultura2.jpg" />
+    <Content Include="Imags\cultura\cultura4.jpg" />
+    <Content Include="Imags\cultura\cultura5.jpg" />
+    <Content Include="Imags\desporto\desporto2.jpg" />
+    <Content Include="Imags\desporto\desporto3.jpg" />
+    <Content Include="Imags\desporto\desporto4.jpg" />
+    <Content Include="Imags\desporto\desportos.jpg" />
+    <Content Include="Imags\estudar\estudar1.jpg" />
+    <Content Include="Imags\estudar\estudar2.jpg" />
+    <Content Include="Imags\estudar\estudar_3.jpg" />
+    <Content Include="Imags\estudar\estudar_4_.jpg" />
     <Content Include="Imags\wallpaperr.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
