--- a/InspiringIPT/InspiringIPT/InspiringIPT.csproj
+++ b/InspiringIPT/InspiringIPT/InspiringIPT.csproj
@@ -368,6 +368,10 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\aspnet-InspiringIPT-20170328012618.mdf" />
+    <Content Include="App_Data\aspnet-InspiringIPT-20170328012618_log.ldf">
+      <DependentUpon>aspnet-InspiringIPT-20170328012618.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -493,20 +497,12 @@
     <Content Include="Views\PotencialAluno\Edit.cshtml" />
     <Content Include="Views\PotencialAluno\Lista.cshtml" />
     <Content Include="Views\Home\Inscricao.cshtml" />
-    <Content Include="Views\Colaboradores\Create.cshtml" />
-    <Content Include="Views\Colaboradores\Details.cshtml" />
-    <Content Include="Views\Colaboradores\Edit.cshtml" />
-    <Content Include="Views\Colaboradores\Perfil.cshtml" />
-    <Content Include="Views\Colaboradores\Listagem.cshtml" />
-    <Content Include="Views\Colaboradores\Editar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
