--- a/InspiringIPT/InspiringIPT/InspiringIPT.csproj
+++ b/InspiringIPT/InspiringIPT/InspiringIPT.csproj
@@ -508,7 +508,7 @@
     <Content Include="Views\PotencialAluno\Delete.cshtml" />
     <Content Include="Views\PotencialAluno\Details.cshtml" />
     <Content Include="Views\PotencialAluno\Edit.cshtml" />
-    <Content Include="Views\PotencialAluno\Lista.cshtml" />
+    <Content Include="Views\PotencialAluno\Index.cshtml" />
     <Content Include="Views\PotencialAluno\Create.cshtml" />
     <Content Include="Views\Home\Inscricao.cshtml" />
     <Content Include="Views\PotencialAluno\ConfirmaAluno.cshtml" />
@@ -527,6 +527,7 @@
     <Content Include="Views\TipoCurso\Details.cshtml" />
     <Content Include="Views\TipoCurso\Edit.cshtml" />
     <Content Include="Views\TipoCurso\Index.cshtml" />
+    <Content Include="Views\PotencialAluno\EditarAluno.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
