Controllers: atualização na classe CursosControllers e na classe PotencialAlunoControllers
Views:PotencialAlunos - adição de novas funcionalidades de confirmação do aluno quando efetua a Pré-Inscrição

--- a/InspiringIPT/InspiringIPT/Web.config
+++ b/InspiringIPT/InspiringIPT/Web.config
@@ -31,9 +31,10 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
-    <customErrors mode="On" defaultRedirect="~/Home/notFound">
+    
+    <!--<customErrors mode="On" defaultRedirect="~/Home/notFound">
       <error statusCode="404" redirect="~/Home/notFound" />
-    </customErrors>
+    </customErrors>-->
 
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
